# tapf-tictactoe

./: README.md  tapf-tictactoe.cabal
src/: Main.hs  Main.hs~
src/TAPF/: AI.hs  GameLoop.hs  GameTree.hs  GameTree.hs~  Minimax.hs  TicTacToe.hs  TicTacToe.hs~  TwoPlayers.hs  TwoPlayers.hs~
