name:                tapf-tictactoe
version:             0.2.0.0
synopsis:            A Simple Tic-Tac-Toe game engine
homepage:            https://github.com/pbv/tapf-tictactoe.git
license:             MIT
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tapf-tictactoe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       TAPF.TicTacToe
                       TAPF.GameLoop
                       TAPF.Minimax
                       TAPF.AI
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers
